--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "hubot-scripts": "^2.17.2",
         "hubot-shipit": "^0.2.1",
         "hubot-slack": "^4.7.1",
+        "node-fetch": "^2.6.0",
         "pg": "^7.11.0",
         "request-promise": "^4.2.4"
     },
