--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "author": "ikoamu <shotaro.aoki@esm.co.jp>",
     "description": "A simple helpful robot for your Company",
     "dependencies": {
+        "express": "^4.17.1",
         "hubot": "^3.3.2",
         "hubot-diagnostics": "^1.0.0",
         "hubot-google-images": "^0.2.7",
